# vk2D

./: AndroidManifest.xml  CMakeLists.txt  README.md  engine.c  perframe.h  vk2D.apk
.github/workflows/: build.yml
cmake/: buildAndroid.cmake  buildLinux.cmake  buildShaders.cmake  buildWindows.cmake  fetchDeps.cmake
font/: font_6x10.h  font_6x8.h
system/: android_main.c  linux_wayland.c  linux_x11.c  win32.c
system/win32/: win32.c
utils/: event.c
vulkan/: vulkan_buffer.c
